--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,8 @@ server:
   port: 8082
   servlet:
     context-path: "/rest/api"
+
+alda:
+  fptlab:
+    jwtSecret: secret
+    jwtExpirationMs: 6000000
