--- a/app.yaml
+++ b/app.yaml
@@ -2,4 +2,6 @@ runtime: java17
 instance_class: F2
 
 env_variables:
-  VAR_NAME: VAR_VALUE
+  SPRING_DATASOURCE_URL: jdbc:postgresql:///fptlab?cloudSqlInstance=balmy-ocean-373515:europe-southwest1:fptlab-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=AYE#/DX#_9f:dpjV
+  SPRING_DATASOURCE_USERNAME: postgres
+  SPRING_DATASOURCE_PASSWORD: AYE#/DX#_9f:dpjV
