--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>2.2.0</version>
+			</plugin>
         </plugins>
 	</build>
 
