--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,7 @@
 runtime: java11
 env: standard
+
+env_variables:
+  SPRING_DATASOURCE_URL: jdbc:postgresql:///fptlab?cloudSqlInstance=balmy-ocean-373515:europe-southwest1:fptlab-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=AYE#/DX#_9f:dpjV
+  SPRING_DATASOURCE_USERNAME: postgres
+  SPRING_DATASOURCE_PASSWORD: AYE#/DX#_9f:dpjV
