--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
     driverClassName: org.postgresql.Driver
 
 server:
-  port: 8080
+  #port: 8080
   servlet:
     context-path: "/rest/api"
