--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,7 @@ server:
   #port: 8080
   servlet:
     context-path: "/rest/api"
+
+logging:
+  level.ROOT: INFO
+  level.org.springframework.test.web.servlet.result: DEBUG
