--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     driverClassName: org.postgresql.Driver
 
 server:
-  #port: 8080
+  port: 8080
   servlet:
     context-path: "/rest/api"
 
