--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,8 +1,14 @@
 runtime: java11
 instance_class: F2
+#env: flex
 env_variables:
   JWT_EXPIRATION_TIME: '6000000'
   JWT_SECRET: 'secret'
-  SPRING_DATASOURCE_URL: 'jdbc:postgresql:///ptlab?cloudSqlInstance=pt-lab-373712:europe-southwest1:ptlab-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=AYE#/DX#_9f:dpjV'
-  SPRING_DATASOURCE_PASSWORD: 'AYE#/DX#_9f:dpjV'
-  SPRING_DATASOURCE_USERNAME: 'postgres'
+  SPRING_DATASOURCE_URL: jdbc:postgresql:///ptlab?cloudSqlInstance=pt-lab-373712:europe-southwest1:ptlab-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=AYE#/DX#_9f:dpjV
+  SPRING_DATASOURCE_PASSWORD: AYE#/DX#_9f:dpjV
+  SPRING_DATASOURCE_USERNAME: postgres
+handlers:
+  - url: /.*
+    script: this field is required, but ignored
+# manual_scaling:
+  # instances: 1
